welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: '(' expected but identifier found.
if estFaceMur()
   ^Program:8: error: ';' expected but 'else' found.
else
^